--- a/customers.html
+++ b/customers.html
@@ -4,7 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Customer Management System</title>
+    <title>MOS Burgers > Customer Management</title>
+    <link rel="icon" href="Assets/logo.jpeg" type="image/x-icon">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.2/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
@@ -23,7 +24,7 @@
         body {
             background-color: #f8f9fa;
             font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-            background-image: url('Designer.jpeg');
+            background-image: url('Assets/logo.jpeg');
             background-size: contain;
             background-position: initial;
             background-repeat: initial;
@@ -150,7 +151,7 @@
     <!-- Bootstrap JS -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.2/js/bootstrap.bundle.min.js"></script>
     <!-- Your custom JS -->
-    <script src="customerScript.js"></script>
+    <script src="Script/customerScript.js"></script>
 </body>
 
 </html>
