--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>MOS Burgers - POS System</title>
+    <title>MOS Burgers > Home</title>
+    <link rel="icon" href="Assets/logo.jpeg" type="image/x-icon">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.2/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" rel="stylesheet">
     <style>
@@ -19,7 +20,7 @@
             padding-top: 70px;
             background-color: #f8f9fa;
             font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-            background-image: url('Designer.jpeg');
+            background-image: url('Assets/logo.jpeg');
             background-size: contain;
             background-position: initial;
             background-repeat: initial;
@@ -340,13 +341,14 @@
     <footer class="footer mt-5">
         <div class="container">
             <div class="row">
-                <div class="col-md-6">
+                <div class="col-md-6 ">
                     <h5><i class="fas fa-hamburger burger-icon me-2"></i>MOS Burgers</h5>
-                    <p>Burger Street, Colombo, Sri Lanka</p>
-                    <p>+94 112 888 888</p>
-                    <p>www.mosburgers.lk</p>
+                    <p>Welcome to MOS Burgers, where we serve the best burgers in town! Our POS system is designed to
+                        streamline your operations and enhance customer experience.</p>
+                    <p>Burger Street, Colombo, Sri Lanka <br> <a href="tel:+94 112 888 888"> 2 888 888</a><br>www.mosburgers.lk</p>
                     <p><a href="#">contact@mosburgers.lk</a></p>
 
+                    <a href="#" class="text-white me-2"><i class="fab fa-whatsapp"></i></a>
                     <a href="#" class="text-white me-2"><i class="fab fa-facebook"></i></a>
                     <a href="#" class="text-white me-2"><i class="fab fa-instagram"></i></a>
                     <a href="#" class="text-white me-2"><i class="fab fa-twitter"></i></a>
@@ -383,14 +385,6 @@
         </div>
     </footer>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.2/js/bootstrap.bundle.min.js"></script>
-    <script src="inventryScripts.js"></script>
-    <script>
-        document.addEventListener('DOMContentLoaded', function () {
-            menuItemCount();
-
-        });
-    </script>
-
 </body>
 
 </html>
