--- a/Inventory.html
+++ b/Inventory.html
@@ -4,7 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Inventory Management - MOS Burgers</title>
+    <title>MOS Burgers > Inventory Management</title>
+    <link rel="icon" href="Assets/logo.jpeg" type="image/x-icon">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <style>
@@ -21,7 +22,7 @@
         body {
             background-color: #f8f9fa;
             font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-            background-image: url('Designer.jpeg');
+            background-image: url('Assets/logo.jpeg');
             background-size: contain;
             background-position: initial;
             background-repeat: initial;
@@ -194,7 +195,7 @@
 
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.min.js"></script>
-    <script src="inventryScripts.js"></script>
+    <script src="Script/inventryScripts.js"></script>
 </body>
 
 </html>
