--- a/menu.html
+++ b/menu.html
@@ -1,7 +1,3 @@
-<!-- the discount is calculating wrong -->
-<!-- cart count not -->
-
-
 <!DOCTYPE html>
 <html lang="en">
 
@@ -9,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MOS Burgers > Menu</title>
+    <link rel="icon" href="Assets/logo.jpeg" type="image/x-icon">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.2/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
 
@@ -62,7 +59,7 @@
             padding-top: 70px;
             background-color: #f8f9fa;
             font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-            background-image: url('Designer.jpeg');
+            background-image: url('Assets/logo.jpeg');
             background-size: contain;
             background-position: initial;
             background-repeat: initial;
@@ -194,7 +191,7 @@
 </footer>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.2/js/bootstrap.bundle.min.js"></script>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
-<script src="menuScript.js"></script>
+<script src="Script/menuScript.js"></script>
 </body>
 
 </html>
